Greatly increase security with pre-request authz
In order to allow administrators to cancel active tokens before their
expiration, the system now records token IDs. If a token ID cannot be
found on a subsequent request, it means that the token was invalidated,
implying that the request must be rejected.

--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,5 +1,5 @@
 db-uri = "postgres://postgrest:supersecretpassword@localhost:5432/scoutges_development"
-db-schema = "public" # this schema gets added to the search_path of every request
+db-schema = "api" # this schema gets added to the search_path of every request
 db-anon-role = "anonymous"
 db-pool = 10
 db-pool-timeout = 10
@@ -16,18 +16,18 @@ server-port = 3001
 
 ## choose a secret, JSON Web Key (or set) to enable JWT auth
 ## (use "@filename" to load from separate file)
-# jwt-secret = "foo"
-# secret-is-base64 = false
-# jwt-aud = "your_audience_claim"
+jwt-secret = "vWQewwbnSm1IZEu3ZBTUyuHBZqxrRCevTsM4dxXrd89x2zO1"
+secret-is-base64 = false
+jwt-aud = "scoutges"
 
 ## limit rows in response
 max-rows = 1000
 
 ## stored proc to exec immediately after auth
-# pre-request = "stored_proc_name"
+pre-request = "public.pre_request_authenticator"
 
 ## jspath to the role claim key
-# role-claim-key = ".role"
+role-claim-key = ".role"
 
 ## extra schemas to add to the search_path of every request
 # db-extra-search-path = "extensions, util"
@@ -37,4 +37,4 @@ max-rows = 1000
 # root-spec = "stored_proc_name"
 
 ## content types to produce raw output
-# raw-media-types="image/png, image/jpg"
+raw-media-types="image/png, image/jpg, image/gif"
