Actually send welcome emails on registration

--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,4 +1,4 @@
-db-uri = "postgres://postgrest:supersecretpassword@localhost:5432/scoutges_development"
+db-uri = "postgres://postgrest:supersecretpassword@localhost/scoutges_development"
 db-schema = "api" # this schema gets added to the search_path of every request
 db-anon-role = "anonymous"
 db-pool = 10
@@ -16,7 +16,7 @@ server-port = 3001
 
 ## choose a secret, JSON Web Key (or set) to enable JWT auth
 ## (use "@filename" to load from separate file)
-jwt-secret = "FNBQzuEhGd4jWhgsm5gNHowCFZBoW4MGAiXosS43zWj9b3I4"
+jwt-secret = "sImpbeEpT2NQ0dOHbxVlOZCMxaTRoLJxPS1nqSqrgALn6YyU"
 secret-is-base64 = false
 jwt-aud = "scoutges"
 
