--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,20 @@ http {
     }
 
     location /api/ {
-      proxy_pass http://localhost:3001/;
+      proxy_pass http://localhost:5001/;
+      proxy_http_version 1.1;
+    }
+
+    location /test {
+      proxy_pass http://localhost:5001;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_read_timeout 1h;
+    }
+
+    location /test/api/ {
+      proxy_pass http://localhost:5002/;
       proxy_http_version 1.1;
     }
   }
