Completely isolate the development and test environments
This allows the specs to load fixtures to the database, while keeping
development pristine for further development.

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,12 +17,17 @@ http {
   keepalive_timeout 65;
   gzip  on;
 
+  ########
+  #
+  # Development
+  #
+  ########
   server {
     listen       3000;
     server_name  localhost;
 
     location / {
-      proxy_pass http://localhost:5000;
+      proxy_pass http://localhost:3001;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
@@ -30,20 +35,30 @@ http {
     }
 
     location /api/ {
-      proxy_pass http://localhost:5001/;
+      proxy_pass http://localhost:3003/;
       proxy_http_version 1.1;
     }
+  }
 
-    location /test {
-      proxy_pass http://localhost:5001;
+  ########
+  #
+  # Test
+  #
+  ########
+  server {
+    listen       4000;
+    server_name  localhost;
+
+    location / {
+      proxy_pass http://localhost:4001;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_read_timeout 1h;
     }
 
-    location /test/api/ {
-      proxy_pass http://localhost:5002/;
+    location /api/ {
+      proxy_pass http://localhost:4003/;
       proxy_http_version 1.1;
     }
   }
