--- a/postgrest.conf
+++ b/postgrest.conf
@@ -1,11 +1,11 @@
-db-uri = "postgres://postgrest:supersecretpassword@localhost/scoutges_development"
+db-uri = "postgres://postgrest:supersecretpassword@localhost:3002/scoutges_development"
 db-schema = "api" # this schema gets added to the search_path of every request
 db-anon-role = "anonymous"
 db-pool = 10
 db-pool-timeout = 10
 
 server-host = "!4"
-server-port = 3001
+server-port = 3003
 
 ## unix socket location
 ## if specified it takes precedence over server-port
@@ -16,7 +16,7 @@ server-port = 3001
 
 ## choose a secret, JSON Web Key (or set) to enable JWT auth
 ## (use "@filename" to load from separate file)
-jwt-secret = "ws3vqKWRK1wpvtuRSft6ZdtT0cEN5xL0n6R2NHoqA98HVybI"
+jwt-secret = "g4E1ZvJTjrvd7FyOky4xLIsAP0pUxc7ZAfpFEJlmVZWmXmp5"
 secret-is-base64 = false
 jwt-aud = "scoutges"
 
