Make specs run in a single call to prove
This ensures that prove will succeed for all or fail for all, not fail
for db specs and on a subsequent run, fail for integration specs.

--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,18 @@ db/cluster*
 # Log files
 log
 
+# Temporary files
+.byebug_history
+
 # Temporary files used by the test harness
 spec/postgrest.conf
 spec/tmp
 spec/screenshots
 spec/videos
 
-.byebug_history
-
+# Vendored dependencies
 node_modules/
+
+# Generated files
+spec/**/*.t
+.proverc
