Prevent running all specs when asking for a subset of specs
With `slow`, prove will reload all specs and run them, without regards
to whatever the command line says. Maybe I don't understand how prove
works, so this bears more investigation.

--- a/.proverc
+++ b/.proverc
@@ -1,6 +1,6 @@
 --failures
 --jobs=9
---state=slow,save
+--state=save
 --recurse
 --rules='seq=spec/db/revert_deploy_spec.t'
 --rules='seq=spec/integration/**/*.t'
