Improve spec resilience by reducing parallelism
I had difficulty making parallel specs running anyway, so I'm not losing
much by switching back to single-thread specs.

--- a/.proverc
+++ b/.proverc
@@ -1,7 +1,5 @@
 --failures
---jobs=9
+--quiet
+--jobs=1
 --state=save
 --recurse
---rules='seq=spec/db/revert_deploy_spec.t'
---rules='seq=spec/integration/**/*.t'
---rules='par=**'
