Reduce developer frustration with nginx logging
This enables the developer to know if the response was an empty JSON
object or if it contained more data. Of course, browser tools can answer
that question, but when at the terminal and reading, it helps.

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,8 @@ http {
   server {
     listen       3000;
     server_name  localhost;
+    access_log /dev/stdout main;
+    error_log /dev/stdout info;
 
     location / {
       proxy_pass http://localhost:3001;
